UC9: Implement grouping of bogies using streams